@@ -14,7 +14,7 @@
     border-radius: 12px;
     font-size: 2em;
     z-index: 2;
-    margin: 0 45px;
+    margin: 20px auto;
 }
 
 .button:hover {
@@ -22,10 +22,6 @@
     color: #f2f2f2;
     cursor: pointer;
     border: solid #f2f2f2;
-}
-
-.buttons {
-    margin: 45px auto;
 }
 
 .fullscreen-video-wrap {
@@ -125,14 +121,11 @@
 
 /* Small */
 @media only screen and (max-width: 768px) {
-    .buttons {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
 
     .button {
         margin: 25px auto;
+        float: left;
+        width: 100%;
     }
     
     .logo img {
@@ -160,10 +153,6 @@
 
 /* Mobile Landscape */
 @media only screen and (max-width: 768px) and (max-height: 500px) {
-    .buttons {
-        display: inline-block;
-    }
-
     .button {
         margin: 20px;
     }
