@@ -37,10 +37,8 @@
                     <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>                </div>
             </div>
             <div class="row">
-                <div class="buttons">
-                    <a href="" class="button col-md-3 col-9">Learn More</a>
-                    <a href="http://shop.ekhocomm.com/" class="button col-md-3 col-9">Shop Now</a>
-                </div>
+                <a href="" class="button col-md-3 col-10">Learn More</a>
+                <a href="http://shop.ekhocomm.com/" class="button col-md-3 col-10">Shop Now</a>
             </div>
         </div>
     </header>
