@@ -77,3 +77,7 @@ Changed background position of services to scroll for mobile
 Added store button to landing page
 Removed clutter on landing page
 Updated mobile layout on landing page to fit multiple buttons
+
+commit 15
+---------
+Fixed mobile resizing issues for landing page buttons
